[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/game/popup_menus/pause_menu/BackToMenu.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/game/popup_menus/pause_menu/ContinueButton.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/game/popup_menus/pause_menu/PauseLabel.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/game/popup_menus/pause_menu/RestartButton.tres" type="DynamicFont" id=4]
[ext_resource path="res://src/game/popup_menus/pause_menu/PauseMenu.gd" type="Script" id=5]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 0.335
script = ExtResource( 5 )

[node name="BackgroundColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.14902, 0.14902, 0.14902, 1 )

[node name="PauseLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 0.25
margin_bottom = 0.0399971
custom_fonts/font = ExtResource( 3 )
text = "Pause"
align = 1
valign = 1

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.25
anchor_right = 0.95
anchor_bottom = 0.45
custom_fonts/font = ExtResource( 2 )
text = "Continue"

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.5
anchor_right = 0.95
anchor_bottom = 0.7
custom_fonts/font = ExtResource( 4 )
text = "Restart"

[node name="BackToMenuButton" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.75
anchor_right = 0.95
anchor_bottom = 0.95
custom_fonts/font = ExtResource( 1 )
text = "Back To Menu"

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="BackToMenuButton" to="." method="_on_BackToMenuButton_pressed"]
